--- a/DotnetTemplate.Web/Styles/home/index.scss
+++ b/DotnetTemplate.Web/Styles/home/index.scss
@@ -1,4 +1,4 @@
-@use "../../node_modules/nhsuk-frontend/packages/core/all" as *;
+@use "nhsuk-frontend/packages/core/all" as *;
 
 ul > li > ul > li {
   list-style-type: circle;
