--- a/DotnetTemplate.Web/Styles/home/layout.scss
+++ b/DotnetTemplate.Web/Styles/home/layout.scss
@@ -1,4 +1,4 @@
-﻿@use "../../node_modules/nhsuk-frontend/packages/core/all" as *;
+﻿@use "nhsuk-frontend/packages/core/all" as *;
 
 html {
   height: 100%;
